# marek_speech_synthesis

./: README.md
marek_tts_audio_output/: Cargo.toml
marek_tts_audio_output/src/: lib.rs
marek_tts_client/: Cargo.toml
marek_tts_client-rs/: Cargo.toml
marek_tts_client-rs/src/: lib.rs
marek_tts_client/src/: lib.rs
marek_tts_converter/: Cargo.toml
marek_tts_converter/gui/: Cargo.toml
marek_tts_example/: Cargo.toml
marek_tts_example-rs/: Cargo.toml
marek_tts_example-rs/src/: main.rs
marek_tts_example/src/: main.rs
marek_tts_server/: .gitignore  README.md  config.toml  marek_tts_server.py  pip_requirements.txt  setup.sh  start.sh
marek_tts_server/engines/: xtts2_speech.py
