[package]
name = "marek_tts_client-rs"
version = "0.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Rust client for Marek TTS Server"
keywords = ["speech", "synthesis", "tts"]
categories = ["accessibility", "multimedia::audio", "api-bindings"]
repository = "https://github.com/marek-g/marek_speech_synthesis"
documentation = "https://docs.rs/marek_tts_client-rs"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
