[package]
name = "marek_tts_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
marek_tts_client = { version = "0.1", path = "../marek_tts_client" }
marek_tts_audio_output = { version = "0.1", path = "../marek_tts_audio_output" }
tokio = { version = "1", features = ["full"] }
